genealogy-macros/tests/ui/generics.stderr
error: #[record] currently doesn't work with generics.
 --> tests/ui/generics.rs:4:14
  |
4 | struct Record<T> {
  |              ^
