genealogy-macros/tests/ui/generics.rs
use genealogy_macros::record;

#[record]
struct Record<T> {
	value: T,
}

pub fn main() {}
